--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
     <div class="container">
 
       <h1><a href="index.html">Dean Aura Nabilla</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span>Informatics Technology Student</span> <br> <br>from University of Indraprasta PGRI</h2>
 
       <nav id="navbar" class="navbar">
@@ -76,9 +74,9 @@
           <img src="assets/img/mee.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Informatics Technology Student</h3>
+          <h3>Informatics Student</h3>
           <p class="fst-italic">
-            My current GPA is 3.54 and I am a fourth-semester student.
+            Bangkit Distinction Graduate.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -137,13 +135,13 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #47aeff;"></i>
-            <h3>MYSQL</h3>
+            <h3>JavaScript</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-            <h3>PYTHON</h3>
+            <h3>REST API</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -177,45 +175,53 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item pb-0">
-            <h4>Undergraduate Informatics Technology Student</h4>
-            <h5>2021 - Present</h5>
-            <p><em>University of Indraprasta PGRI, Indonesia</em></p>
+            <h4>University of Indraprasta PGRI, Indonesia</h4>
+            <h5> Sept 2021 - Present</h5>
+            <p><em>Informatics, 3.51</em></p>
           </div>
 
           <h3 class="resume-title">Organization &amp; Volunteer</h3>
           <div class="resume-item">
-            <h4>Ruby Community by Avoskin</h4>
-            <h5>2023- Present</h5>
+            <h4>Novo Club Batch 2, Paragon Corp</h4>
+            <h5>Feb - Des 2023 </h5>
             <p><em>Member</em></p>
+            <p>
+              <ul>
+                <li>Participated in Learning and Development activities organized by Novo Club to enhance skills and knowledge.</li>
+                <li>Involved in group projects collaborating with Paragon to generate innovative goals.</li>
+                <li>Assisted in the development of Novo Club's regional organization to expand impact and network on campus.</li>
+                <li>Engaged in collaborative programs with Paragon to disseminate benefits to the community.</li>
+              </ul>
+            </p>
           </div>
           <div class="resume-item">
-            <h4>Novo Club by Paragon</h4>
-            <h5>2023- Present</h5>
-            <p><em>Member</em></p>
+            <h4>Golongan Muda Indonesia (GoMuda)</h4>
+            <h5>May - Des 2023 </h5>
+            <p><em>Team Event</em></p>
+            <p>
+              <ul>
+                <li>Actively involved in planning and executing events focusing on the environment as part of the event team at GoMuda Indonesia.</li>
+                <li>Coordinated with team members, volunteers, and partners to ensure smooth execution of events and significant positive impact.</li>
+                <li>Responsible for managing logistics, coordinating team efforts, and promoting events to achieve successful outcomes.</li>
+                <li>Conducted post-event evaluations and monitoring to gather valuable feedback and enhance the success of future events.</li>
+              </ul>
+            </p>
           </div>
-          <div class="resume-item">
-            <h4><em>Volunteer</em> Peduly Jakarta</h4>
-            <h5>2023- Present</h5>
-            <p><em>Member</em></p>
-          </div>
-          <div class="resume-item">
-            <h4>Japanese Zone</h4>
-            <h5>2022- Present</h5>
-            <p><em>Member</em></p>
-          </div>
-        </div>
+
         <div class="col-lg-6">
           <h3 class="resume-title">Training</h3>
           <div class="resume-item">
-            <h4>Data Analysis: Fullstack Intensive Bootcamp</h4>
-            <h5>Feb - March 2023</h5>
-            <p><em>MySkill, Indonesia </em></p>
+            <h4>Bangkit Academy Batch 2 2023</h4>
+            <h5>August - Jan 2024</h5>
+            <p><em>Cloud Computing Learning Path</em></p>
             <p>
             <ul>
-              <li>Acquired knowledge of statistical analysis and its applications in data science</li>
-              <li>Completed multiple projects involving data analysis, visualization, and machine learning </li>
-              <li>Worked collaboratively with other students on group projects and assignments</li>
-              <li>Networked with industry professionals and sought mentorship from experienced data analysts</li>
+              <li>Completed the Independent Study program at Bangkit Academy in the field of Cloud Computing, with a focus on understanding fundamental concepts, cloud technologies, and best practices.</li>
+              <li>Engaged in collaborative projects with team members to design and implement cloud-based solutions using Google Cloud Platform services.</li>
+              <li>Received guidance and direct feedback from industry practitioners and cloud technology experts to enhance skills and knowledge.</li>
+              <li>Developed individual projects reflecting a deep understanding of cloud technology usage, such as creating applications with Google Cloud Services or building cloud architecture for specific business scenarios.</li>
+              <li>Deep understanding of current concepts in cloud computing, including resource management, security, and automation.</li>
+              <li>Mastered skills in using Google Cloud tools and services such as Compute Engine, Cloud Storage, and Kubernetes to manage and deploy applications.</li>
             </ul>
             </p>
           </div>
@@ -239,7 +245,7 @@
   </section><!-- End Resume Section -->
 
   <!-- ======= Services Section ======= -->
-  <!-- <section id="services" class="services">
+  <section id="services" class="services">
     <div class="container">
 
       <div class="section-title">
@@ -299,7 +305,7 @@
       </div>
 
     </div> -->
-  </section><!-- End Services Section -->
+  </section><!-- End Services Section
 
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
@@ -313,9 +319,9 @@
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <!-- <li data-filter="*" class="filter-active">All</li>
+            <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li> -->
+<!--             <li data-filter=".filter-card">Card</li> -->
             <li data-filter=".filter-web">Web</li>
           </ul>
         </div>
@@ -323,7 +329,7 @@
 
       <div class="row portfolio-container">
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -335,7 +341,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
